Added GetOrderItem with each individual product.. DTO, Services and Controller.
I bringed the data to FE but didn't manage to map it on the checkout modal.

--- a/proiect/BusinessLayer_DBFirst/BusinessLayer.csproj
+++ b/proiect/BusinessLayer_DBFirst/BusinessLayer.csproj
@@ -99,6 +99,7 @@
   <ItemGroup>
     <Compile Include="ClientServices.cs" />
     <Compile Include="ComandaServices.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Interfaces\ICache.cs" />
     <Compile Include="Interfaces\IClient.cs" />
     <Compile Include="Interfaces\IComanda.cs" />
