Update on checkout modal and products on products page
-stock control
-stock check to not over buy
-order placement
-edit cart: add/remove 1 item or entire product

These modifies went from the view back to the DTO affecting all layers

--- a/proiect/Exceptions/Exceptions.csproj
+++ b/proiect/Exceptions/Exceptions.csproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <Compile Include="EntityValidationException.cs" />
     <Compile Include="EntryNotFoundException.cs" />
+    <Compile Include="InsufficientStockException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
